kubernetes/apps/kube-system/cilium/policies/allow-asustor-egress.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
# Allow Prometheus to reach Asustor NAS exporters (node_exporter 9100, smartctl_exporter 9633)
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-asustor-egress
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: observability
      app.kubernetes.io/name: prometheus
  egress:
    - toCIDR:
        - 10.25.30.1/32
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
            - port: "9633"
              protocol: TCP
